--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
     "gulp-line-ending-corrector": "^1.0.3",
+    "gulp-markdown": "^5.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
@@ -58,8 +59,7 @@
     "svgo": "^1.3.0"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1",
-    "sass-lint": "^1.13.1"
+    "normalize.css": "^8.0.1"
   },
   "peerDependencies": {}
 }
